--- a/static/style.css
+++ b/static/style.css
@@ -7,3 +7,14 @@ div.stButton > button {
     margin-top: 2rem;
 
 }
+
+body {
+    color: #262730;
+    background-color: #f5f5f5;
+}
+
+/* Set the primary color for buttons */
+.stButton button {
+    background-color: #04c4e6 !important;
+    color: #ffffff !important;
+}
